# fancy-agent-platform

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  README_EN.md  configure.sh  deploy.config.example  deploy.sh  docker-compose.yml
backend/: .env.docker.example  .env.mysql.example  .env.sqlite.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: agent_api_tool_router.py  agent_builtin_tool_router.py  agent_image_tool_router.py  agent_mcp_router.py  agent_router.py  agent_webhook_router.py  api_tool_router.py  auth_router.py  chat_router.py  dingtalk_webhook_router.py  discord_interaction_router.py  email_agent_router.py  generated_image_router.py  help_document_router.py  image_tool_router.py  kg_router.py  llm_router.py  mcp_router.py  prompt_template_router.py  scheduled_task_router.py  session_router.py  session_share_router.py  skill_router.py  stats_router.py  telegram_webhook_router.py  upload_router.py  user_memory_router.py  webhook_trigger_router.py  workspace_router.py
backend/app/core/: config.py  crypto.py  database.py  logging_config.py  scheduler.py  security.py
backend/app/mappers/: agent_api_tool_mapper.py  agent_builtin_tool_mapper.py  agent_image_tool_mapper.py  agent_mapper.py  agent_mcp_mapper.py  agent_webhook_mapper.py  api_tool_mapper.py  (+26 more)
backend/db_init/: 01table_create.sql
backend/scripts/: backfill_thumbnails.py  dump_encrypt_sql.py  encrypt_existing_keys.py  generate_mysql_schema.py  import_help_docs.py  show_decrypted_keys.py
backend/tests/: conftest.py
(+330 files in other folders)
