[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "asyncmy>=0.2.11",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "langchain>=1.2.4",
    "langchain-core>=1.2.7",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "pydantic[email]>=2.12.5",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "aiofiles>=25.1.0",
    "apscheduler>=3.10.4",
    "python-docx>=1.2.0",
    "pypdf>=6.9.1",
    "langchain-anthropic>=1.4.0",
    "tavily-python>=0.5.0",
    "beautifulsoup4>=4.12.0",
    "cryptography>=46.0.3",
    "ddgs>=9.11.4",
    "matplotlib>=3.9.0",
    "langchain-google-genai>=4.2.1",
    "aioboto3>=13.0.0",
]

[project.optional-dependencies]
observability = ["mlflow>=2.16.0"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
